--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,15 +14,17 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   provider: ^6.1.1
-
-
   flutter_localizations:
     sdk: flutter
   intl: any
+  path_provider: ^2.0.11
+  firebase_core: ^2.31.1
+  cloud_firestore: ^4.17.4
 
 dev_dependencies:
   flutter_test:
-    sdk: flutter
+   sdk: flutter
+  build_runner:
 
   flutter_lints: ^2.0.0
 
